# smartmodule-meets-smartcore

./: Cargo.toml  README.md
crates/sms-data-clean/: Cargo.toml
crates/sms-data-clean/src/: lib.rs
crates/spam-classifier-sm/: Cargo.toml  build.rs
crates/spam-classifier-sm/src/: lib.rs
