[package]
name = "spam-classifier"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.68"
fluvio-smartmodule = { path = "../../../fluvio/crates/fluvio-smartmodule" }
sms-data-clean = { path = "../sms-data-clean"}
smartcore = { version = "*", default-features = false, features = ["serde"] }

[build-dependencies]
serde_json = "1.0.68"
sms-data-clean = { path = "../sms-data-clean"}
smartcore = { version = "*", default-features = false, features = ["serde"] }

[lib]
crate-type = ['cdylib']
